[tool.poetry]
name = "slackapidecorator"
version = "0.1.0"
description = ""
authors = ["gsy00911 yoshiki0911@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
sphinx = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
